Changes for APR 1.3.0

  *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
     O(n)-time lookup in apr_pollset_remove() (currently implemented
     only for epoll).  [Brian Pane]

  *) Add apr_file_buffer_set() and apr_file_buffer_size_get() functions
     to support variable buffer sizes with APR file handles.
     [Colm MacCarthaigh]

  *) Add apr_file_open_flags_std[err|out|in]() functions.
     [Colm MacCarthaigh]

  *) stdio: apr_file_open_std[err|out|in]() functions now set the APR_WRITE
     or APR_READ flag as appropriate. [Colm MacCarthaigh]

  *) multicast: apr_mcast_*() no longer return APR_ENOTIMPL when invoked
     for non-UDP/RAW sockets. The caller is expected to ensure that the
     socket-type is suitable for multicast. [Colm MacCarthaigh]

  *) Add apr_sockaddr_ip_getbuf() function.  [Joe Orton]

  *) Fix handling of %pI in apr_psprintf.  [Joe Orton]

  *) Provide APR_VERSION_AT_LEAST() macro for applications which 
     want to enable features based on a required level of APR.
     [Jeff Trawick]

  *) jlibtool: Teach to use static libraries with -static.
     [Justin Erenkrantz]

  *) Fix checks for alloca() support in configure.  PR 13037.
     [Noah Misch <noah cs.caltech.edu>]

  *) If apr_proc_create() fails to exec in the fork()ed child, call
     _exit() not exit() to avoid running atexit()-registered functions
     in the child.  PR 30913.  [Joe Orton]

  *) Add %pm support to apr_snprintf() for printing the error string
     corresponding to an apr_status_t value.  [Joe Orton]

  *) Add APR_ARRAY_IDX() and APR_ARRAY_PUSH() convenience macros to
     apr_tables.h.  [Garrett Rooney]

Changes for APR 1.2.2

  *) Win32: fix apr_proc_mutex_trylock() to handle WAIT_TIMEOUT,
     returning APR_EBUSY.  [Ronen Mizrahi <ronen@tversity.com>]

  *) Fix apr_socket_opt_set() issue where TCP_NODELAY would be
     set when TCP_DEFER_ACCEPT was set.  [Brian Pane]

  *) Allow TCP_NODELAY and TCP_CORK to be set concurrently on