@@ -395,6 +395,7 @@ APR_DECLARE(apr_status_t) apr_pollset_poll(apr_pollset_t *pollset,
             j++;
         }
     }
+    (*num) = j;
 
     if (descriptors)
         *descriptors = pollset->result_set;
