@@ -1,5 +1,10 @@
 Changes for APR 1.3.0
 
+  *) Bugfix for apr_pollset_poll() on systems that implement pollsets
+     using select(2): properly compute the number of signalled desciptors
+     when one or more of them are both readable and writable.
+     [Dror Shilo <Dror.Shilo@ericom.com>, Gerry <gerry@everythingsucks.co.uk>]
+
   *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
      O(n)-time lookup in apr_pollset_remove() (currently implemented
      only for epoll).  [Brian Pane]
